# scalable-video-codec

./: CMakeLists.txt  LICENSE.txt  README.md  cli.cpp  cli.hpp  codec.hpp  decoder.cpp  decoder.hpp  decoder_config.cpp  decoder_config.hpp  draw.hpp  encoder.cpp  encoder.hpp  encoder_config.cpp  encoder_config.hpp  error.hpp  math.hpp  motion.cpp  motion.hpp  queue.hpp  thread.cpp  thread.hpp
apps/: CMakeLists.txt  decoder.cpp  encoder.cpp
cmd/: CMakeLists.txt  decoder.cpp  encoder.cpp
libs/: CMakeLists.txt  codec.hpp  draw.cpp  encoder.cpp  encoder.hpp  error.hpp  motion.hpp  queue.hpp  thread.cpp  types.hpp
